animations added, refintments

--- a/app/src/main/res/drawable/circle_blue.xml
+++ b/app/src/main/res/drawable/circle_blue.xml
@@ -21,7 +21,7 @@
                 android:shape="ring"
                 android:thicknessRatio="15"
                 android:useLevel="true">
-                <solid android:color="@color/colorBlue" />
+                <solid android:color="@color/colorYellowDark" />
             </shape>
         </rotate>
     </item>
