--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:transitionGroup="true"
-    tools:targetApi="lollipop"
-    tools:context=".ui.test.TestFragment" >
+    tools:context=".ui.test.TestFragment"
+    tools:targetApi="lollipop">
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/btnBack"
@@ -158,8 +158,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="48dp"
                         android:layout_marginLeft="8dp"
+                        android:buttonTint="@color/colorRed"
                         android:elevation="10dp"
                         android:fontFamily="@font/quicksand_bold"
+                        android:includeFontPadding="false"
+                        android:paddingBottom="1dp"
                         android:text="answerOne"
                         android:textAlignment="viewStart"
                         android:textColor="@android:color/secondary_text_light"
@@ -171,8 +174,11 @@
                         android:layout_height="48dp"
                         android:layout_marginLeft="8dp"
                         android:layout_marginTop="8dp"
+                        android:buttonTint="@color/colorRed"
                         android:elevation="10dp"
                         android:fontFamily="@font/quicksand_bold"
+                        android:includeFontPadding="false"
+                        android:paddingBottom="1dp"
                         android:text="answerTwo"
                         android:textAlignment="viewStart"
                         android:textColor="@android:color/secondary_text_light"
@@ -184,8 +190,11 @@
                         android:layout_height="48dp"
                         android:layout_marginLeft="8dp"
                         android:layout_marginTop="8dp"
+                        android:buttonTint="@color/colorRed"
                         android:elevation="10dp"
                         android:fontFamily="@font/quicksand_bold"
+                        android:includeFontPadding="false"
+                        android:paddingBottom="1dp"
                         android:text="answerThree"
                         android:textAlignment="viewStart"
                         android:textColor="@android:color/secondary_text_light"
