--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -18,18 +18,22 @@
             android:clipToPadding="false"
             android:paddingBottom="64dp">
 
-            <de.hdodenhof.circleimageview.CircleImageView
+            <com.makeramen.roundedimageview.RoundedImageView
                 android:id="@+id/btnProfileImageDashboard"
                 android:layout_width="36dp"
                 android:layout_height="36dp"
                 android:layout_gravity="right"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
-                android:elevation="4dp"
-                app:civ_border_color="@color/colorYellow"
-                app:civ_border_width="2dp"
+                android:elevation="8dp"
+                android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:riv_border_color="@color/colorYellow"
+                app:riv_border_width="2dp"
+                app:riv_corner_radius="30dip"
+                app:riv_mutate_background="true"
+                app:riv_oval="true" />
 
             <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
                 android:id="@+id/pbExp"
