--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -32,16 +32,20 @@
                 android:requiresFadingEdge="none"
                 android:scaleType="fitXY" />
 
-            <de.hdodenhof.circleimageview.CircleImageView
+            <com.makeramen.roundedimageview.RoundedImageView
                 android:id="@+id/btnProfileImageHome"
                 android:layout_width="36dp"
                 android:layout_height="36dp"
                 android:layout_gravity="right"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginRight="16dp"
-                android:elevation="4dp"
-                app:civ_border_color="@color/colorGreen"
-                app:civ_border_width="2dp" />
+                android:elevation="8dp"
+                android:scaleType="centerCrop"
+                app:riv_border_color="@color/colorGreen"
+                app:riv_border_width="2dp"
+                app:riv_corner_radius="30dip"
+                app:riv_mutate_background="true"
+                app:riv_oval="true" />
 
             <LinearLayout
                 android:layout_width="match_parent"
