--- a/app/src/main/res/layout/custom_alert_dialog.xml
+++ b/app/src/main/res/layout/custom_alert_dialog.xml
@@ -62,7 +62,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="64dp"
             android:fontFamily="@font/quicksand_bold"
-            android:text="masterec"
+            android:text="mastered"
             android:textColor="@color/colorBlue"
             android:textSize="16sp"
             android:textStyle="bold"
