moved to only portrait layouts

--- a/app/src/main/res/layout-sw600dp/fragment_my_list.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_my_list.xml
@@ -90,7 +90,7 @@
                             android:id="@+id/text_input_phrase"
                             android:layout_width="0dp"
                             android:layout_height="76dp"
-                            android:layout_marginStart="128dp"
+                            android:layout_marginStart="64dp"
                             android:layout_marginTop="32dp"
                             android:layout_marginEnd="8dp"
                             app:boxBackgroundColor="#FFFFFF"
@@ -131,24 +131,26 @@
 
                         <com.google.android.material.floatingactionbutton.FloatingActionButton
                             android:id="@+id/fabAddWord"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="128dp"
+                            android:layout_width="64sp"
+                            android:layout_height="96sp"
+                            android:layout_marginEnd="64dp"
                             android:clickable="true"
                             android:src="@android:drawable/ic_input_add"
                             android:tint="#FFFFFF"
                             app:backgroundTint="@color/colorBlue"
+                            app:fabCustomSize="64dp"
                             app:layout_constraintBottom_toBottomOf="@+id/text_input_phrase"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toEndOf="@id/text_input_phrase"
                             app:layout_constraintTop_toTopOf="@+id/text_input_phrase"
+                            app:maxImageSize="36dp"
                             app:rippleColor="#80FFFFFF"
                             app:tint="@color/design_default_color_background" />
 
                         <com.google.android.material.floatingactionbutton.FloatingActionButton
                             android:id="@+id/fabTest"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="64sp"
+                            android:layout_height="64sp"
                             android:layout_marginTop="16dp"
                             android:clickable="true"
                             android:elevation="0dp"
@@ -156,34 +158,36 @@
                             app:backgroundTint="@android:color/transparent"
                             app:borderWidth="0dp"
                             app:elevation="0dp"
+                            app:fabCustomSize="64dp"
                             app:layout_constraintEnd_toStartOf="@+id/fabDeleteAll"
                             app:layout_constraintStart_toEndOf="@+id/fabLearn"
                             app:layout_constraintTop_toBottomOf="@+id/text_input_phrase"
+                            app:maxImageSize="36dp"
                             app:pressedTranslationZ="0dp"
                             app:tint="@color/colorRed" />
 
                         <com.google.android.material.floatingactionbutton.FloatingActionButton
                             android:id="@+id/fabDeleteAll"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="64sp"
+                            android:layout_height="64sp"
                             android:layout_marginTop="16dp"
-                            android:layout_marginEnd="128dp"
                             android:clickable="true"
                             android:elevation="0dp"
                             android:src="@drawable/outline_delete_forever_black_48dp"
                             app:backgroundTint="@android:color/transparent"
                             app:borderWidth="0dp"
                             app:elevation="0dp"
-                            app:layout_constraintEnd_toEndOf="parent"
+                            app:fabCustomSize="64dp"
+                            app:layout_constraintEnd_toEndOf="@+id/fabAddWord"
                             app:layout_constraintTop_toBottomOf="@+id/text_input_phrase"
+                            app:maxImageSize="36dp"
                             app:pressedTranslationZ="0dp"
                             app:tint="@color/colorRed" />
 
                         <com.google.android.material.floatingactionbutton.FloatingActionButton
                             android:id="@+id/fabLearn"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="128dp"
+                            android:layout_width="64sp"
+                            android:layout_height="64sp"
                             android:layout_marginTop="16dp"
                             android:clickable="true"
                             android:elevation="0dp"
@@ -191,8 +195,10 @@
                             app:backgroundTint="@android:color/transparent"
                             app:borderWidth="0dp"
                             app:elevation="0dp"
-                            app:layout_constraintStart_toStartOf="parent"
+                            app:fabCustomSize="64dp"
+                            app:layout_constraintStart_toStartOf="@+id/text_input_phrase"
                             app:layout_constraintTop_toBottomOf="@+id/text_input_phrase"
+                            app:maxImageSize="36dp"
                             app:pressedTranslationZ="0dp"
                             app:tint="@color/colorGreen" />
 
@@ -222,7 +228,7 @@
         android:id="@+id/btnBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="BACK"
         android:textColor="#FFFFFF"
