--- a/app/src/main/res/layout/fragment_learning.xml
+++ b/app/src/main/res/layout/fragment_learning.xml
@@ -13,29 +13,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="84dp"
-        android:text="BACK"
+        android:layout_marginTop="16dp"
         android:textColor="#FFFFFF"
         app:backgroundTint="@color/colorGreen"
         app:icon="@drawable/abc_vector_test"
         app:iconTint="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:rippleColor="#33FFFFFF" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="108dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="108dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        app:cardCornerRadius="24dp"
         app:cardElevation="4dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/txtProgress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/textView3">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -62,152 +62,12 @@
                 android:id="@+id/txtPinyin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
                 android:fontFamily="@font/quicksand_bold"
                 android:text="pinyin"
                 android:textAlignment="center"
                 android:textSize="24sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/txtProgress"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginBottom="32dp"
-                android:fontFamily="@font/quicksand_bold"
-                android:text="@string/progress_placeholder"
-                android:textAlignment="textStart"
-                app:layout_constraintBottom_toTopOf="@+id/fabDone"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <ProgressBar
-                android:id="@+id/progressBar"
-                style="?android:progressBarStyleHorizontal"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:elevation="16dp"
-                android:progress="0"
-                android:progressDrawable="@drawable/circle"
-                android:translationZ="90dp"
-                app:layout_constraintBottom_toBottomOf="@+id/fabDone"
-                app:layout_constraintEnd_toEndOf="@+id/fabDone"
-                app:layout_constraintHorizontal_bias="0.464"
-                app:layout_constraintStart_toStartOf="@+id/fabDone"
-                app:layout_constraintTop_toTopOf="@+id/fabDone" />
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fabDone"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
-                android:layout_gravity="bottom"
-                android:layout_marginBottom="48dp"
-                android:layout_weight="1"
-                android:background="@null"
-                android:clickable="true"
-                android:elevation="16dp"
-                android:focusable="auto"
-                android:src="@drawable/baseline_done_white_48"
-                app:backgroundTint="@color/colorGreen"
-                app:elevation="8dp"
-                app:fabCustomSize="64dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:rippleColor="#33FFFFFF"
-                app:tint="#FFFFFF" />
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fabAnswer"
-                style="?android:attr/borderlessButtonStyle"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
-                android:layout_gravity="bottom"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="48dp"
-                android:layout_weight="1"
-                android:background="@null"
-                android:clickable="true"
-                android:elevation="0dp"
-                android:focusable="auto"
-                android:src="@drawable/outline_visibility_off_white_48"
-                app:backgroundTint="@android:color/transparent"
-                app:borderWidth="0dp"
-                app:elevation="0dp"
-                app:fabCustomSize="64dp"
-                app:hoveredFocusedTranslationZ="0dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:maxImageSize="24dp"
-                app:pressedTranslationZ="0dp"
-                app:rippleColor="@color/colorBlue"
-                app:tint="@color/colorBlue" />
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fabSave"
-                style="@style/Widget.MaterialComponents.FloatingActionButton"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
-                android:layout_gravity="bottom"
-                android:layout_marginStart="20dp"
-                android:layout_marginBottom="48dp"
-                android:layout_weight="1"
-                android:background="@null"
-                android:clickable="true"
-                android:elevation="0dp"
-                android:focusable="auto"
-                android:src="@drawable/outline_bookmark_border_white_48"
-                app:backgroundTint="@android:color/transparent"
-                app:borderWidth="0dp"
-                app:elevation="0dp"
-                app:fabCustomSize="64dp"
-                app:hoveredFocusedTranslationZ="0dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:maxImageSize="24dp"
-                app:pressedTranslationZ="0dp"
-                app:rippleColor="@android:color/holo_orange_dark"
-                app:tint="@color/colorYellow" />
-
-            <TextView
-                android:id="@+id/txtSavedMessage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:fontFamily="@font/quicksand_bold"
-                android:text="Saved!"
-                android:textColor="@color/colorYellow"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/fabSave"
-                app:layout_constraintEnd_toEndOf="@+id/fabSave"
-                app:layout_constraintStart_toStartOf="@+id/fabSave" />
-
-            <TextView
-                android:id="@+id/txtUnsavedMessage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:fontFamily="@font/quicksand_bold"
-                android:text="Unsaved!"
-                android:textColor="@color/colorYellow"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/fabSave"
-                app:layout_constraintEnd_toEndOf="@+id/fabSave"
-                app:layout_constraintStart_toStartOf="@+id/fabSave" />
-
-            <TextView
-                android:id="@+id/txtAnswerMessage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:fontFamily="@font/quicksand_bold"
-                android:text="Here's a hint..."
-                android:textColor="@color/colorBlue"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/fabAnswer"
-                app:layout_constraintEnd_toEndOf="@+id/fabAnswer"
-                app:layout_constraintStart_toStartOf="@+id/fabAnswer" />
+                app:layout_constraintBottom_toBottomOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -232,8 +92,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="100dp"
+        android:fontFamily="@font/quicksand_bold"
         android:letterSpacing="0.1"
         android:text="@string/assessment_learning"
         android:textAlignment="center"
@@ -241,7 +101,141 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtLevelTitle"
-        android:fontFamily="@font/quicksand_bold" />
+        app:layout_constraintTop_toBottomOf="@+id/txtLevelTitle" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:progressBarStyleHorizontal"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginBottom="64dp"
+        android:elevation="16dp"
+        android:progress="0"
+        android:progressDrawable="@drawable/circle"
+        android:translationZ="90dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabDone"
+        android:layout_width="67dp"
+        android:layout_height="63dp"
+        android:layout_gravity="bottom"
+        android:layout_weight="1"
+        android:background="@null"
+        android:clickable="true"
+        android:elevation="16dp"
+        android:focusable="auto"
+        android:src="@drawable/baseline_done_white_48"
+        app:backgroundTint="@color/colorGreen"
+        app:elevation="8dp"
+        app:fabCustomSize="64dp"
+        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
+        app:layout_constraintEnd_toEndOf="@+id/progressBar"
+        app:layout_constraintStart_toStartOf="@+id/progressBar"
+        app:layout_constraintTop_toTopOf="@+id/progressBar"
+        app:rippleColor="#33FFFFFF"
+        app:tint="#FFFFFF" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabAnswer"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_gravity="bottom"
+        android:layout_weight="1"
+        android:background="@null"
+        android:clickable="true"
+        android:elevation="0dp"
+        android:focusable="auto"
+        android:src="@drawable/outline_visibility_off_white_48"
+        app:backgroundTint="@android:color/transparent"
+        app:borderWidth="0dp"
+        app:elevation="0dp"
+        app:fabCustomSize="64dp"
+        app:hoveredFocusedTranslationZ="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/progressBar"
+        app:layout_constraintTop_toTopOf="@+id/fabDone"
+        app:maxImageSize="24dp"
+        app:pressedTranslationZ="0dp"
+        app:rippleColor="@color/colorBlue"
+        app:tint="@color/colorBlue" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabSave"
+        style="@style/Widget.MaterialComponents.FloatingActionButton"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_gravity="bottom"
+        android:layout_weight="1"
+        android:background="@null"
+        android:clickable="true"
+        android:elevation="0dp"
+        android:focusable="auto"
+        android:src="@drawable/outline_bookmark_border_white_48"
+        app:backgroundTint="@android:color/transparent"
+        app:borderWidth="0dp"
+        app:elevation="0dp"
+        app:fabCustomSize="64dp"
+        app:hoveredFocusedTranslationZ="0dp"
+        app:layout_constraintEnd_toStartOf="@+id/progressBar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/fabDone"
+        app:maxImageSize="24dp"
+        app:pressedTranslationZ="0dp"
+        app:rippleColor="@android:color/holo_orange_dark"
+        app:tint="@color/colorYellow" />
+
+    <TextView
+        android:id="@+id/txtAnswerMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/quicksand_bold"
+        android:text="Here's a hint..."
+        android:textAlignment="center"
+        android:textColor="@color/colorBlue"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/fabAnswer"
+        app:layout_constraintStart_toStartOf="@+id/fabAnswer"
+        app:layout_constraintTop_toTopOf="@+id/txtProgress" />
+
+    <TextView
+        android:id="@+id/txtProgress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="8dp"
+        android:fontFamily="@font/quicksand_bold"
+        android:text="@string/progress_placeholder"
+        android:textAlignment="textStart"
+        app:layout_constraintBottom_toTopOf="@+id/fabDone"
+        app:layout_constraintEnd_toEndOf="@+id/progressBar"
+        app:layout_constraintStart_toStartOf="@+id/progressBar" />
+
+    <TextView
+        android:id="@+id/txtUnsavedMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/quicksand_bold"
+        android:text="Unsaved!"
+        android:textColor="@color/colorYellow"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/fabSave"
+        app:layout_constraintStart_toStartOf="@+id/fabSave"
+        app:layout_constraintTop_toTopOf="@+id/txtProgress" />
+
+    <TextView
+        android:id="@+id/txtSavedMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/quicksand_bold"
+        android:text="Saved!"
+        android:textColor="@color/colorYellow"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/fabSave"
+        app:layout_constraintStart_toStartOf="@+id/fabSave"
+        app:layout_constraintTop_toTopOf="@+id/txtProgress" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
