--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -6,7 +6,7 @@
             android:shape="ring"
             android:thicknessRatio="15"
             android:useLevel="false">
-            <solid android:color="#FAFAFA" />
+            <solid android:color="#FFFFFF" />
         </shape>
     </item>
     <item>
