--- a/app/src/main/res/layout-sw600dp/fragment_learning.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_learning.xml
@@ -12,15 +12,17 @@
         android:id="@+id/cardView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="108dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="108dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginBottom="32dp"
+        app:cardCornerRadius="24sp"
         app:cardElevation="4dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/txtProgress"
+        app:layout_constraintDimensionRatio=""
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/textView3">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -37,7 +39,7 @@
                 android:gravity="center|center_horizontal|center_vertical"
                 android:text="@string/phrase_placeholder"
                 android:textAlignment="center"
-                android:textSize="64sp"
+                android:textSize="96sp"
                 app:layout_constraintBottom_toTopOf="@+id/txtPinyin"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -47,152 +49,12 @@
                 android:id="@+id/txtPinyin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="32dp"
                 android:fontFamily="@font/quicksand_bold"
                 android:text="pinyin"
                 android:textAlignment="center"
-                android:textSize="24sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/txtProgress"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginBottom="32dp"
-                android:fontFamily="@font/quicksand_bold"
-                android:text="@string/progress_placeholder"
-                android:textAlignment="textStart"
-                app:layout_constraintBottom_toTopOf="@+id/fabDone"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <ProgressBar
-                android:id="@+id/progressBar"
-                style="?android:progressBarStyleHorizontal"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:elevation="16dp"
-                android:progress="0"
-                android:progressDrawable="@drawable/circle"
-                android:translationZ="90dp"
-                app:layout_constraintBottom_toBottomOf="@+id/fabDone"
-                app:layout_constraintEnd_toEndOf="@+id/fabDone"
-                app:layout_constraintHorizontal_bias="0.464"
-                app:layout_constraintStart_toStartOf="@+id/fabDone"
-                app:layout_constraintTop_toTopOf="@+id/fabDone" />
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fabDone"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
-                android:layout_gravity="bottom"
-                android:layout_marginBottom="48dp"
-                android:layout_weight="1"
-                android:background="@null"
-                android:clickable="true"
-                android:elevation="16dp"
-                android:focusable="auto"
-                android:src="@drawable/baseline_done_white_48"
-                app:backgroundTint="@color/colorGreen"
-                app:elevation="8dp"
-                app:fabCustomSize="64dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:rippleColor="#80FFFFFF"
-                app:tint="#FFFFFF" />
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fabAnswer"
-                style="?android:attr/borderlessButtonStyle"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
-                android:layout_gravity="bottom"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="48dp"
-                android:layout_weight="1"
-                android:background="@null"
-                android:clickable="true"
-                android:elevation="0dp"
-                android:focusable="auto"
-                android:src="@drawable/outline_visibility_off_white_48"
-                app:backgroundTint="@android:color/transparent"
-                app:borderWidth="0dp"
-                app:elevation="0dp"
-                app:fabCustomSize="64dp"
-                app:hoveredFocusedTranslationZ="0dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:maxImageSize="24dp"
-                app:pressedTranslationZ="0dp"
-                app:rippleColor="@color/colorBlue"
-                app:tint="@color/colorBlue" />
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fabSave"
-                style="@style/Widget.MaterialComponents.FloatingActionButton"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
-                android:layout_gravity="bottom"
-                android:layout_marginStart="20dp"
-                android:layout_marginBottom="48dp"
-                android:layout_weight="1"
-                android:background="@null"
-                android:clickable="true"
-                android:elevation="0dp"
-                android:focusable="auto"
-                android:src="@drawable/outline_bookmark_border_white_48"
-                app:backgroundTint="@android:color/transparent"
-                app:borderWidth="0dp"
-                app:elevation="0dp"
-                app:fabCustomSize="64dp"
-                app:hoveredFocusedTranslationZ="0dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:maxImageSize="24dp"
-                app:pressedTranslationZ="0dp"
-                app:rippleColor="@android:color/holo_orange_dark"
-                app:tint="@color/colorYellow" />
-
-            <TextView
-                android:id="@+id/txtSavedMessage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:fontFamily="@font/quicksand_bold"
-                android:text="Saved!"
-                android:textColor="@color/colorYellow"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/fabSave"
-                app:layout_constraintEnd_toEndOf="@+id/fabSave"
-                app:layout_constraintStart_toStartOf="@+id/fabSave" />
-
-            <TextView
-                android:id="@+id/txtUnsavedMessage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:fontFamily="@font/quicksand_bold"
-                android:text="Unsaved!"
-                android:textColor="@color/colorYellow"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/fabSave"
-                app:layout_constraintEnd_toEndOf="@+id/fabSave"
-                app:layout_constraintStart_toStartOf="@+id/fabSave" />
-
-            <TextView
-                android:id="@+id/txtAnswerMessage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:fontFamily="@font/quicksand_bold"
-                android:text="Here's a hint..."
-                android:textColor="@color/colorBlue"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/fabAnswer"
-                app:layout_constraintEnd_toEndOf="@+id/fabAnswer"
-                app:layout_constraintStart_toStartOf="@+id/fabAnswer" />
+                android:textSize="36sp"
+                app:layout_constraintBottom_toBottomOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -210,7 +72,7 @@
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/btnBack" />
 
     <TextView
         android:id="@+id/textView3"
@@ -243,5 +105,144 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:rippleColor="#33FFFFFF" />
+
+    <TextView
+        android:id="@+id/txtSavedMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/quicksand_bold"
+        android:text="Saved!"
+        android:textColor="@color/colorYellow"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/fabSave"
+        app:layout_constraintStart_toStartOf="@+id/fabSave"
+        app:layout_constraintTop_toTopOf="@+id/txtProgress" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabSave"
+        style="@style/Widget.MaterialComponents.FloatingActionButton"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        android:layout_gravity="bottom"
+        android:layout_marginStart="64dp"
+        android:layout_weight="1"
+        android:background="@null"
+        android:clickable="true"
+        android:elevation="0dp"
+        android:focusable="auto"
+        android:src="@drawable/outline_bookmark_border_white_48"
+        app:backgroundTint="@android:color/transparent"
+        app:borderWidth="0dp"
+        app:elevation="0dp"
+        app:fabCustomSize="96dp"
+        app:hoveredFocusedTranslationZ="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/fabDone"
+        app:maxImageSize="36sp"
+        app:pressedTranslationZ="0dp"
+        app:rippleColor="@android:color/holo_orange_dark"
+        app:tint="@color/colorYellow" />
+
+    <TextView
+        android:id="@+id/txtAnswerMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/quicksand_bold"
+        android:text="Here's a hint..."
+        android:textColor="@color/colorBlue"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/fabAnswer"
+        app:layout_constraintStart_toStartOf="@+id/fabAnswer"
+        app:layout_constraintTop_toTopOf="@+id/txtProgress" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabDone"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        android:layout_gravity="bottom"
+        android:layout_weight="1"
+        android:background="@null"
+        android:clickable="true"
+        android:elevation="16dp"
+        android:focusable="auto"
+        android:src="@drawable/baseline_done_white_48"
+        app:backgroundTint="@color/colorGreen"
+        app:elevation="8dp"
+        app:fabCustomSize="96dp"
+        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
+        app:layout_constraintEnd_toEndOf="@+id/progressBar"
+        app:layout_constraintStart_toStartOf="@+id/progressBar"
+        app:layout_constraintTop_toTopOf="@+id/progressBar"
+        app:maxImageSize="36sp"
+        app:rippleColor="#80FFFFFF"
+        app:tint="#FFFFFF" />
+
+    <TextView
+        android:id="@+id/txtProgress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="32dp"
+        android:fontFamily="@font/quicksand_bold"
+        android:text="@string/progress_placeholder"
+        android:textAlignment="textStart"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/progressBar"
+        app:layout_constraintEnd_toEndOf="@+id/progressBar"
+        app:layout_constraintStart_toStartOf="@+id/progressBar" />
+
+    <TextView
+        android:id="@+id/txtUnsavedMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/quicksand_bold"
+        android:text="Unsaved!"
+        android:textColor="@color/colorYellow"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/fabSave"
+        app:layout_constraintStart_toStartOf="@+id/fabSave"
+        app:layout_constraintTop_toTopOf="@+id/txtProgress" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabAnswer"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        android:layout_gravity="bottom"
+        android:layout_marginEnd="64dp"
+        android:layout_weight="1"
+        android:background="@null"
+        android:clickable="true"
+        android:elevation="0dp"
+        android:focusable="auto"
+        android:src="@drawable/outline_visibility_off_white_48"
+        app:backgroundTint="@android:color/transparent"
+        app:borderWidth="0dp"
+        app:elevation="0dp"
+        app:fabCustomSize="96dp"
+        app:hoveredFocusedTranslationZ="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/fabDone"
+        app:maxImageSize="36sp"
+        app:pressedTranslationZ="0dp"
+        app:rippleColor="@color/colorBlue"
+        app:tint="@color/colorBlue" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:progressBarStyleHorizontal"
+        android:layout_width="135dp"
+        android:layout_height="135dp"
+        android:layout_marginBottom="104dp"
+        android:elevation="16dp"
+        android:progress="0"
+        android:progressDrawable="@drawable/circle"
+        android:translationZ="90dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/fabAnswer"
+        app:layout_constraintStart_toEndOf="@+id/fabSave" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
